# bash_scripts

./: .gitignore  .pre-commit-config.yaml  README.md  create_venv.sh  custom_gif  ds.sh  make_todo_notes.sh  own_screenshot.config  own_screenshot.sh  own_screenshot.usage.md  remote_clipboard.py  screenshot_server.py  setup.cfg  tox.ini
own_screenshot/: README.md  own_screenshot.sh  screenshot_local.sh  screenshot_server  screenshot_server.sh
slava_utils/: compact.py  nocomments.py  prune_remote_branches.py  screenshot_server.py
