[metadata]
name = slava_utils
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = screenshot_server,remote_clipboard
install_requires =
    requests

[options.entry_points]
console_scripts =
    screenshot_server = screenshot_server:main
    scs = screenshot_server:main
