[metadata]
name = slava_utils
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    requests

[options.entry_points]
console_scripts =
    screenshot_server = slava_utils.screenshot_server:main
    scs = slava_utils.screenshot_server:main
