[metadata]
name = slava_utils
version = 0.3.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    requests
include_package_data = True

[options.entry_points]
console_scripts =
    screenshot_server = slava_utils.screenshot_server:main
    scs = slava_utils.screenshot_server:main
    prune-remote-branches = slava_utils.prune_remote_branches:main
    inotify-exec = slava_utils.inotify_exec:main

[options.package_data]
slava_utils =
    *
